0.04

0.03 2025-09-28T20:34:58+02:00
 - Add test for bad ISBN (field 020a).
 - Add test for record without ISB (field 020a).
 - Fix dependencies.

0.02 2025-09-28T09:09:10+02:00
 - Add add_error() helper function.
 - Add validation for field 020a ISBN.
 - Regen doc EXAMPLE.

0.01 2025-07-02T21:32:38+02:00
 - First version.