@@ -1,4 +1,5 @@
 0.04
+ - Add plugin for field 040e with leader 018 a.
 
 0.03 2025-09-28T20:34:58+02:00
  - Add test for bad ISBN (field 020a).
